@@ -7,6 +7,7 @@ export(getSocketClients,
 	   parSocket,
        processSocket,
        sendSocketClients,
+	   sendSocketServer,
        closeSocketClients,
        startSocketServer,
        stopSocketServer)
