@@ -2,6 +2,8 @@
 
 == Changes in svSocket 0.9-43
 * Example added in processSocket(), implementing a simple REPL
+* A new function, sendSocketServer() is added to send and evaluate commands from
+  one R instance (client) to another one (a R socket server)
 
 
 == Changes in svSocket 0.9-43
